# substrate-node-template

node/: Cargo.toml
node/cfun/: Cargo.toml  build.rs
node/cfun/lib/: test.c
node/cfun/src/: lib.rs
node/cint/: Cargo.toml
node/cint/src/: lib.rs
node/clib/: Cargo.toml  build.sh
node/clib/src/: lib.rs
node/src/: main.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
