[package]
authors = ['']
description = ''
edition = '2018'
name = 'cint'
version = '2.0.1'

[dependencies]
# local dependencies
sp-runtime-interface = { version = "2.0.1", default-features = false}
cfun = { path = '../cfun', default-features = false, version = '2.0.1', optional = true }

[features]
default = ['std']
std = [
    'sp-runtime-interface/std',
    'cfun',
]
